--- a/content/guides/install_clojure.adoc
+++ b/content/guides/install_clojure.adoc
@@ -125,9 +125,9 @@ Alternately, you can use https://github.com/casselc/clj-msi[clj-msi] to install 
 [[java]]
 === Java
 
-Clojure requires Java. Clojure officially supports Java LTS releases (currently Java 8, 11, 17 and 21), but also tries to ensure interim versions work as well. You can use any Java distribution, whether it’s a commercial release from Oracle or an open source version based on OpenJDK (like Temurin). The Clojure tools require only that the `java` command is on the `PATH` or that the `JAVA_HOME` environment variable is set.
+Clojure requires Java. Clojure officially supports Java LTS releases (currently Java 8, 11, 17, 21, and 25), but also tries to ensure interim versions work as well. You can use any Java distribution, whether it’s a commercial release from Oracle or an open source version based on OpenJDK (like Temurin). The Clojure tools require only that the `java` command is on the `PATH` or that the `JAVA_HOME` environment variable is set.
 
-If you don't already have Java installed, we recommend installing Adoptium Temurin 21.
+If you don't already have Java installed, we recommend installing Adoptium Temurin 25.
 
 To use the Adoptium Temurin installers:
 
@@ -137,13 +137,13 @@ To use the Adoptium Temurin installers:
 
 On Mac, you can also install Temurin using brew:
 
-* `brew install --cask temurin@21` - install Temurin 21 (formerly AdoptOpenJDK)
+* `brew install --cask temurin@21` - install Temurin 25 (formerly AdoptOpenJDK)
 
-Check your Java version by running `java --version`. If that's not Temurin 21, then you may then need to add `java` to your `PATH`:
+Check your Java version by running `java --version`. If that's not Temurin 25, then you may then need to add `java` to your `PATH`:
 
 [source,shell]
 ----
-echo 'export PATH="/Library/Java/JavaVirtualMachines/temurin-21.jdk/Contents/Home/bin:$PATH"' >> ~/.zshrc
+echo 'export PATH="/Library/Java/JavaVirtualMachines/temurin-25.jdk/Contents/Home/bin:$PATH"' >> ~/.zshrc
 ----
 
 == Installing archive or prerelease versions of the CLI
