--- a/content/guides/install_clojure.adoc
+++ b/content/guides/install_clojure.adoc
@@ -137,7 +137,7 @@ To use the Adoptium Temurin installers:
 
 On Mac, you can also install Temurin using brew:
 
-* `brew install --cask temurin@21` - install Temurin 25 (formerly AdoptOpenJDK)
+* `brew install --cask temurin@25` (formerly AdoptOpenJDK)
 
 Check your Java version by running `java --version`. If that's not Temurin 25, then you may then need to add `java` to your `PATH`:
 
