update author for ClojureScript survey

--- a/content/news/2026/01/20/deref.adoc
+++ b/content/news/2026/01/20/deref.adoc
@@ -32,7 +32,7 @@ Clojure/Conj 2025
 
 == Blogs, articles, and news
 
-* https://state-of-clojurescript.com/2025[State of ClojureScript 2025 Survey results] - ClojureScript Team
+* https://state-of-clojurescript.com/2025[State of ClojureScript 2025 Survey results] - Roman Liutikov
 * https://orestis.gr/clojure-and-ai-agents-an-experience-report/[Clojure and AI agents - an experience report] - Orestis Markou
 * https://building.nubank.com/designing-real-systems-with-immutable-data-in-clojure/[Designing real systems with immutable data in Clojure - Building Nubank] - Nubank Editorial
 * https://yyhh.org/blog/2026/01/triple-store-triple-progress-datalevin-posited-for-the-future/[Triple Store, Triple Progress: Datalevin Posited for the Future] - Huahai Yang
